monticore-generator/src/test/resources/cocos/invalid/A4014/A4014.mc4
package cocos.invalid.A4014;

grammar A4014 {
  enum A = "a" | "a";

}